server/packages/sandbox-agent/tests/sessions/snapshots/sessions__sessions__hooks__assert_hooks_snapshot@env_vars_mock.snap
---
source: server/packages/sandbox-agent/tests/sessions/hooks.rs
expression: value
---
file_exists: true
has_agent: true
has_hook_type: true
has_session_id: true
