server/packages/sandbox-agent/tests/sessions/snapshots/sessions__sessions__hooks__assert_hooks_snapshot@full_lifecycle_mock.snap
---
source: server/packages/sandbox-agent/tests/sessions/hooks.rs
expression: value
---
message_end_executed: true
message_start_executed: true
session_end_executed: true
session_start_executed: true
