server/packages/sandbox-agent/tests/sessions/snapshots/sessions__sessions__hooks__assert_hooks_snapshot@message_end_mock.snap
---
source: server/packages/sandbox-agent/tests/sessions/hooks.rs
expression: value
---
content_valid: true
event_count: 7
hook_executed: true
