server/packages/sandbox-agent/tests/sessions/snapshots/sessions__sessions__hooks__assert_hooks_snapshot@multiple_hooks_mock.snap
---
source: server/packages/sandbox-agent/tests/sessions/hooks.rs
expression: value
---
hook1_executed: true
hook2_executed: true
hook3_executed: true
