server/packages/sandbox-agent/tests/sessions/snapshots/sessions__sessions__hooks__assert_hooks_snapshot@stop_on_failure_mock.snap
---
source: server/packages/sandbox-agent/tests/sessions/hooks.rs
expression: value
---
first_executed: true
third_executed: false
